로그인과 회원가입 정상실행 테스트 완료