@@ -1,7 +1,7 @@
 package com.example.demo.controller;
 
 import com.example.demo.mapper.UserMapper;
-import com.example.demo.security.jwt.JwtTokenProvider;
+import com.example.demo.security.JwtTokenProvider;
 import lombok.Data;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -9,13 +9,16 @@ import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
 @RestController
 @RequestMapping("/api/auth")
+@Validated
 public class AuthController {
 
     private final AuthenticationManager authenticationManager;
@@ -42,17 +45,15 @@ public class AuthController {
 
     @Data
     public static class LoginRequest {
-        // 프론트에서 email을 username으로 보냄
-        private String username;
+        // 프론트에서 email을 username 필드로 보내게 할 거야
+        private String username; // email
         private String password;
     }
 
     @Data
     public static class TokenResponse {
         private String token;
-        public TokenResponse(String token) {
-            this.token = token;
-        }
+        public TokenResponse(String token) { this.token = token; }
     }
 
     // 회원가입
@@ -62,26 +63,28 @@ public class AuthController {
         if (req.getEmail() == null || req.getEmail().isEmpty() ||
             req.getPassword() == null || req.getPassword().isEmpty() ||
             req.getNickname() == null || req.getNickname().isEmpty()) {
+
+            // Java 8에서는 Map.of 사용 불가 → Collections.singletonMap 사용
             return ResponseEntity.badRequest()
-                    .body(Map.of("message", "이메일, 비밀번호, 닉네임을 모두 입력해주세요."));
+                    .body(Collections.singletonMap("message", "이메일, 비밀번호, 닉네임을 모두 입력해주세요."));
         }
 
         if (userMapper.existsByEmail(req.getEmail())) {
             return ResponseEntity.badRequest()
-                    .body(Map.of("message", "이미 가입된 이메일입니다."));
+                    .body(Collections.singletonMap("message", "이미 가입된 이메일입니다."));
         }
 
         Map<String, Object> data = new HashMap<>();
         data.put("email", req.getEmail());
-        data.put("password", passwordEncoder.encode(req.getPassword())); // 🔒 반드시 해시
+        data.put("password", passwordEncoder.encode(req.getPassword())); // 비밀번호 해시
         data.put("nickname", req.getNickname());
         data.put("provider", "LOCAL");
         data.put("providerId", null);
-        data.put("role", "USER"); // 기본 USER, 관리자는 DB에서 role='ADMIN'으로 수동 수정
+        data.put("role", "USER"); // 기본 USER
 
         userMapper.insertUser(data);
 
-        return ResponseEntity.ok(Map.of("message", "회원가입이 완료되었습니다."));
+        return ResponseEntity.ok(Collections.singletonMap("message", "회원가입이 완료되었습니다."));
     }
 
     // 로그인
@@ -90,18 +93,19 @@ public class AuthController {
         try {
             Authentication auth = authenticationManager.authenticate(
                     new UsernamePasswordAuthenticationToken(
-                            req.getUsername(),  // email
+                            req.getUsername(),   // email
                             req.getPassword()
                     )
             );
 
-            String token = tokenProvider.generateToken(auth); // 기존 JwtTokenProvider 메서드명에 맞게
+            String token = tokenProvider.generateToken(auth);
 
             return ResponseEntity.ok(new TokenResponse(token));
         } catch (Exception e) {
             return ResponseEntity
                     .status(HttpStatus.UNAUTHORIZED)
-                    .body(Map.of("message", "아이디 또는 비밀번호가 올바르지 않습니다."));
+                    .body(Collections.singletonMap("message", "아이디 또는 비밀번호가 올바르지 않습니다."));
         }
     }
 }
+
